--- a/login.html
+++ b/login.html
@@ -2,92 +2,59 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Sistema de Enfermagem</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css" />
+  <title>Log in</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+  <!-- Bulma Version 0.7.2-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
+  <link rel="stylesheet" type="text/css" href="../Prontuario/resources/css/login.css">
   <script src="main.js"></script>
-
 </head>
 
 <body>
-
-  <section class="hero is-primary">
+  <section class="hero is-success is-fullheight">
     <div class="hero-body">
-      <div class="container">
-        <h1 class="title">
-          Hospital São Lucas - Sistema Enfermaria
-        </h1>
-        <h1 class="subtitle">
-          Login e Senha
-        </h1>
+      <div class="container has-text-centered">
+        <div class="column is-4 is-offset-4">
+          <h3 class="title has-text-grey">Sistema de Enfermagem</h3>
+          <p class="subtitle has-text-grey">Entre com as suas credenciais para prosseguir.</p>
+          <div class="box">
+            <figure class="avatar">
+              <img src="../Prontuario/resources/img/button_add_01.png">
+            </figure>
+            <form>
+              <div class="field">
+                <div class="control">
+                  <input class="input is-large" type="email" placeholder="Usuário" autofocus="">
+                </div>
+              </div>
+
+              <div class="field">
+                <div class="control">
+                  <input class="input is-large" type="password" placeholder="Sua senha">
+                </div>
+              </div>
+              <div class="field">
+                <label class="checkbox">
+                  <input type="checkbox">
+                  Lembrar minha senha
+                </label>
+              </div>
+              <button class="button is-block is-info is-large is-fullwidth">Entrar</button>
+            </form>
+          </div>
+          <p class="has-text-grey">           
+            <a href="altera_senha.html">Esqueci minha senha</a> &nbsp;·&nbsp;
+            <a href="contato_suporte.html">Precisa de ajuda?</a>
+          </p>
+        </div>
       </div>
     </div>
   </section>
-
-
-  <div class="hero-body">
-    <div class="container">
-      <div class="columns">
-        <div class="column is-one-third">
-
-          <div class="field">
-            <label class="label is"></label>
-
-          </div>
-          <div class="field">
-            <label class="label">Login</label>
-            <div class="control">
-              <input class="input" type="text" placeholder="Text input">
-            </div>
-          </div>
-
-          <label class="label">Senha</label>
-          <div class="control">
-            <input class="input" type="text" placeholder="Text input">
-          </div>
-
-
-
-          <div class="field is-grouped">
-            <div class="control">
-              <br> <button class="button is-link">Acessar</button>
-            </div>
-
-
-            <div class="field">
-              <div class="control">
-
-                <br><br><br>Ainda não tem cadastro?
-                <a href="#">Cadastre-se</a>
-                </label>
-
-              </div>
-
-
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-
+  <script async type="text/javascript" src="../js/bulma.js"></script>
 </body>
 
-<footer class="card-footer">
-  <p class="card-footer-item">
-    <span>
-      <br>
-      Dúvidas? Entre em contato com nosso <a href="https://twitter.com/codinghorror/status/506010907021828096">Suporte</a>
-    </span>
-  </p>
-
-</footer>
-</div>
-
-
 </html>
-<html>
