--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <!-- Bulma Version 0.7.2-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
-  <link rel="stylesheet" type="text/css" href="../Prontuario/resources/css/login.css">
+  <link rel="stylesheet" type="text/css" href="resources/css/login.css">
   <script src="main.js"></script>
 </head>
 
@@ -24,7 +24,7 @@
           <p class="subtitle has-text-grey">Entre com as suas credenciais para prosseguir.</p>
           <div class="box">
             <figure class="avatar">
-              <img src="../Prontuario/resources/img/button_add_01.png">
+              <img src="resources/img/button_add_01.png">
             </figure>
             <form>
               <div class="field">
