criação do arquivo main.js

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
   <!-- Bulma Version 0.7.2-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
   <link rel="stylesheet" type="text/css" href="resources/css/login.css">
-  <script src="main.js"></script>
+  <script src="resources/js/main.js"></script>
 </head>
 
 <body>
