--- a/contato_suporte.html
+++ b/contato_suporte.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <!-- Bulma Version 0.7.2-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />    
-    <script src="main.js"></script>
+    <script src="resources/js/main.js"></script>
 </head>
 <body>
     
