--- a/prontuario.html
+++ b/prontuario.html
@@ -8,7 +8,7 @@
   <title>Prontuario</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css" />
-  <script src="main.js"></script>
+  <script src="resources/js/main.js"></script>
 
 </head>
 
