--- a/cadastro_leito.html
+++ b/cadastro_leito.html
@@ -51,16 +51,23 @@
             </div>
           </div>
 
+		   <div class="field">
+            <label class="label">Andar</label>
+            <div class="control">
+              <input class="input" type="text" placeholder="">
+            </div>
+          </div>
+
         
           <div class="field">
             <div class="control">
               <strong>Status:</strong><br>
               <label class="radio">
-                <input type="radio" name="question">
+                <br><input type="radio" name="question">
                 Ocupado
               </label>
               <label class="radio">
-                <input type="radio" name="question">
+                <br><input type="radio" name="question">
                 Liberado
               </label>
             </div>
