--- a/cadastro_prontuario.html
+++ b/cadastro_prontuario.html
@@ -34,9 +34,9 @@
         <div class="column is-three-quarters">
           <div class="field">
 		  
-			      <h1 class="title">
-				      <center>Cadastro de Prontuário</center>
-			      </h1>
+			<h1 class="title">
+				<center>Cadastro de Prontuário</center>
+			</h1>
 		  
             <label class="label">Código do Prontuário:</label>
             <div class="control">
@@ -88,7 +88,7 @@
 
           <div class="field">
             <div class="control">
-              <strong>Sofre de alguma doença?</strong><br>
+              <br><strong>Sofre de alguma doença?</strong><br>
               <label class="radio">
                 <input type="radio" name="question">
                 Sim
@@ -105,7 +105,7 @@
 
           <div class="field">
             <div class="control">
-              <strong>Possui alergia a algum medicamento?</strong><br>
+              <br><strong>Possui alergia a algum medicamento?</strong><br>
               <label class="radio">
                 <input type="radio" name="question">
                 Sim
@@ -147,6 +147,5 @@
 		</p>
 	</footer>
 </section>
-
 
 </html>
