--- a/cadastro_especialistas.html
+++ b/cadastro_especialistas.html
@@ -25,6 +25,17 @@
         </h2>
       </div>
     </div>
+      <div class="hero-foot">
+        <nav class="tabs">
+          <div class="container">
+            <ul>
+              <li class="is-active"><a href="consulta_especialistas.html">Cancelar</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="login.html">Sair</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
    </section>
 
 
@@ -134,7 +145,7 @@
 	<footer class="card-footer">
 		<p class="card-footer-item">
 			<span>
-				Dúvidas? Entre em contato com nosso <a href="https://twitter.com/codinghorror/status/506010907021828096">Suporte</a>
+				Dúvidas? Entre em contato com nosso <a href="contato_suporte.html">Suporte</a>
 			</span>
 		</p>
 	</footer>
