--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="resources/img/button_add_01.png">
-  <title>Sistema de Enfermagem</title>
+  <title>Hospital São Lucas - Sistema Enfermaria</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <!-- Bulma Version 0.7.2-->
@@ -20,11 +20,11 @@
     <div class="hero-body">
       <div class="container has-text-centered">
         <div class="column is-4 is-offset-4">
-          <h3 class="title has-text-grey">Sistema de Enfermagem</h3>
+          <h3 class="title has-text-grey">Sistema de Enfermaria</h3>
           <p class="subtitle has-text-grey">Entre com as suas credenciais para prosseguir.</p>
           <div class="box">
             <figure class="avatar">
-              <img src="resources/img/button_add_01.png">
+              <img src="resources/img/logo.png">
             </figure>
             <form>
               <div class="field">
