--- a/cadastro_especialistas.html
+++ b/cadastro_especialistas.html
@@ -8,6 +8,7 @@
   <title>Hospital São Lucas - Sistema Enfermaria</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css" />
+  <link rel="stylesheet" href="resources/css/custom.css">
   <script src="resources/js/main.js"></script>
 
 </head>
