--- a/consulta_prontuario.html
+++ b/consulta_prontuario.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css" />
   <script src="resources/js/main.js"></script>
-
+  <link rel="stylesheet" href="resources/css/custom.css">
 </head>
 
 <body>
