--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Bulma Version 0.7.2-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />    
     <script src="resources/js/main.js"></script>
+    <link rel="stylesheet" href="resources/css/custom.css">
 </head>
 <body>
     <section class="hero is-primary is-medium">
