--- a/login.html
+++ b/login.html
@@ -16,12 +16,13 @@
 </head>
 
 <body>
-  <section class="hero is-success is-fullheight">
+  <section class="hero is-primary">
     <div class="hero-body">
       <div class="container has-text-centered">
         <div class="column is-4 is-offset-4">
-          <h3 class="title has-text-grey">Sistema de Enfermaria</h3>
-          <p class="subtitle has-text-grey">Entre com as suas credenciais para prosseguir.</p>
+	
+          <h3 class="title">Sistema de Enfermaria</h3>
+          <p class="subtitle">Entre com as suas credenciais para prosseguir.</p>
           <div class="box">
             <figure class="avatar">
               <img src="resources/img/logo.png">
@@ -29,7 +30,7 @@
             <form>
               <div class="field">
                 <div class="control">
-                  <input class="input is-large" type="email" placeholder="Usuário" autofocus="">
+                  <input class="input is-large" type="email" placeholder="Usuário" autofocus="" value="Usuário">
                 </div>
               </div>
 
