--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
             <form>
               <div class="field">
                 <div class="control">
-                  <input class="input is-large" type="email" placeholder="Usuário" autofocus="" value="Usuário">
+                  <input class="input is-large" type="email" placeholder="Usuário" autofocus="">
                 </div>
               </div>
 
@@ -45,7 +45,7 @@
                   Lembrar minha senha
                 </label>
               </div>
-              <button class="button is-block is-info is-large is-fullwidth">Entrar</button>
+              <button class="button is-block is-info is-large is-fullwidth"><a href="index.html">Entrar</a></button>
             </form>
           </div>
           <p class="has-text-grey">           
